Fix social icons misaligned

--- a/themes/basakbeykoz/react-src/src/header/_nav.scss
+++ b/themes/basakbeykoz/react-src/src/header/_nav.scss
@@ -111,8 +111,8 @@
                             width: auto;
                             height: #{$accentThickness / 4};
                             top: auto;
-                            right: #{$accentThickness};
-                            left: #{$accentThickness};
+                            right: #{$accentThickness /2};
+                            left: #{$accentThickness /2};
                         }
                     }
                 }
